micromobility_car_navigation/local/Project/dev_ws/log/build_2021-03-11_16-17-38/pathfinding/stdout_stderr.log
running egg_info
writing ../../build/pathfinding/pathfinding.egg-info/PKG-INFO
writing dependency_links to ../../build/pathfinding/pathfinding.egg-info/dependency_links.txt
writing entry points to ../../build/pathfinding/pathfinding.egg-info/entry_points.txt
writing requirements to ../../build/pathfinding/pathfinding.egg-info/requires.txt
writing top-level names to ../../build/pathfinding/pathfinding.egg-info/top_level.txt
reading manifest file '../../build/pathfinding/pathfinding.egg-info/SOURCES.txt'
writing manifest file '../../build/pathfinding/pathfinding.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/user/Projects/dev_ws/install/pathfinding/lib/python3.8/site-packages/pathfinding/pathfinding_service.py to pathfinding_service.cpython-38.pyc
  File "/home/user/Projects/dev_ws/install/pathfinding/lib/python3.8/site-packages/pathfinding/pathfinding_service.py", line 1
    from ../mm_interfaces.srv import Pathfinding
           ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/user/Projects/dev_ws/install/pathfinding/lib/python3.8/site-packages/pathfinding-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/pathfinding/pathfinding.egg-info to /home/user/Projects/dev_ws/install/pathfinding/lib/python3.8/site-packages/pathfinding-0.0.0-py3.8.egg-info
running install_scripts
Installing pathfinding_service script to /home/user/Projects/dev_ws/install/pathfinding/lib/pathfinding
writing list of installed files to '/home/user/Projects/dev_ws/build/pathfinding/install.log'
